<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <!-- TenVersionActivity.java -->
    <string name="app_name">TenVersion</string>
    <string name="safe_btn_txt">안전 리스트 </string>
    <string name="live_btn_txt">생명 리스트 </string>
    <string name="etc_btn_txt">기타 리스트 </string>
    <string name="setting_btn_txt">Setting  </string>

    <!-- SafeListActivity.java -->
 	<string name="all_del_select_txt">전체선택</string>
    <string name="all_del_deselect_txt">전체해제</string>



    <!-- LiveListActivity.java -->
        
        
    <!-- EtcListActivity.java -->


    <!-- SettingActivity.java -->
    <string name="setting_wifi_txt">알람 Wi-Fi 선택</string>
    <string name="setting_wifi_summary_txt">사용 할  Wi-Fi 선택</string>
    <string name="setting_alarm_txt">알람 시간 설정</string>
    <string name="setting_alarm_summary_txt">시간 설정으로 사용</string>
    <string name="setting_sound_txt">알람 소리 On/Off</string>
    <string name="setting_sound_summary_txt"></string>
    <string name="setting_vibrate_txt">알람 진동  On/Off</string>
    <string name="setting_vibrate_summary_txt"></string>
    <string name="setting_help_txt">도움말</string>
    <string name="setting_help_summary_txt"></string>
    <string name="setting_version_txt">버전정보</string>
    <string name="setting_version_summary_txt"></string>

    <string name="not_wifi_ssid">사용 할 wifi를 선택해 주세요.</string>
    <string name="not_setting">설정안함</string>


    <!-- TestDialogActivity.java -->
    <string name="test_dialog1_btn_txt">test dialog 1 </string>
    
    <!-- FlipperViewActivity.java -->
    <string name="testFlipper_btn_txt">test flipper View </string>
    
    <!-- PreviewListActivity.java -->
    <string name="preview_okbtn_txt">확인</string>
    
     <!-- List Tag id -->
    <item type="id" name="tag_id"></item> 
    <item type="id" name="tag_contents"></item> 
    <item type="id" name="tag_mode"></item> 
    <item type="id" name="tag_del_satate"></item>
    
   <item type="id" name= "tag_wifi_item"></item>
    <item type="id" name="wifi_ssid"></item>
    <item type="id" name="wifi_bssid"></item>
    
    <!-- CustomDialog.java -->
    <!-- dialog_addlist.xml -->
    <string name="addlist_title_txt">항목 추가</string>
    <string name="okbtn_txt">확인</string>
    <string name="cancelbtn_txt">취소</string>
    <string name="addlist_edittext_hint">추가할 내용을 입력하세요</string>
    <!-- dialog_dellist.xml -->
    <string name="deletebtn_txt">삭제</string>
    <!-- dialog_funlist.xml -->
    <string name="funlist_title_txt">!!마지막 체크!!</string>
    <!-- dialog_modifylist.xml -->
    <string name="modifylist_title_txt">항목 수정</string>
    <string name="modifybtn_txt">수정</string>
     
    <!-- Choose Wifi Dialog -->
    
    
     <!-- VersionInfo.java -->
      <string name="version_title_txt">버전 :</string>
      <string name="version_code_title_txt">버전 코드 : </string>
      <string name="developer_title_txt">개발자 : </string>
      <string name="developer_txt"> Tenversion</string>
    
</resources>