<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background ="@drawable/all">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" />
    
    <Button
        android:id="@+id/safe_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/safe_btn_txt" 
        />

    <Button
        android:id="@+id/live_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/live_btn_txt"
        android:background="@drawable/dog" />

    <Button
        android:id="@+id/etc_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/etc_btn_txt"
        android:background="@drawable/plant" />

    <Button
        android:id="@+id/setting_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_btn_txt"
        android:background="@drawable/light"
        />
    
    <Button
        android:id="@+id/testdailog_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/testdailog_btn_txt" />
    
      <Button
        android:id="@+id/testFlipper_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/testFlipper_btn_txt" />

</LinearLayout>