<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="240dip"
  android:layout_height="160dip"
  android:background="@layout/dialog_shape">
  
<LinearLayout
  android:id="@+id/addlist_title_layout"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical">
  <TextView
        android:id="@+id/addlist_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        android:text="@string/addlist_title_txt"
        android:textColor="#FF6954"
        android:textSize="22sp"
        />
 <View 
  		android:layout_width="fill_parent"
		android:layout_height="2dip"  
		android:background="@android:color/white"
	/>   
</LinearLayout> 

<LinearLayout
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:orientation="horizontal"
  android:layout_alignParentBottom="true">
  <Button
	android:id="@+id/addlist_okBtn"
	android:layout_width ="wrap_content"
	android:layout_height ="wrap_content"
	android:layout_weight="1"
	android:background="@drawable/btn_selector"
	android:text="@string/okbtn_txt"
	/>
  <Button
	android:id="@+id/addlist_cancelBtn"
	android:layout_width ="wrap_content"
	android:layout_height ="wrap_content"
	android:layout_weight="1"
	android:background="@drawable/btn_selector"
	android:text="@string/cancelbtn_txt"
	/>
</LinearLayout>

<EditText
    android:id="@+id/addlist_edittxt"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_below="@id/addlist_title_layout"
    android:layout_marginTop="16dip"
    android:maxLength="20"
    android:ems="10"
    android:hint="@string/addlist_edittext_hint"/>


</RelativeLayout>
