<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="#F5F8C0">
    <View 
  		android:layout_width="fill_parent"
		android:layout_height="3dip"  
		android:background="@android:color/white"
	/>
    
<!-- wifi -->
	<FrameLayout 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	>
   <RelativeLayout
		android:id="@+id/wifi_layout"
		android:layout_width="fill_parent"
		android:layout_height="50dip"
		android:background="#C9ED75"
	
		>
	<ImageView 
		android:id="@+id/wifi_image"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/wifi_full"
	     />
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="50dip"
		android:orientation="vertical"
		android:layout_marginLeft="50dip"
		>
	<TextView
		android:id="@+id/wifi_tv"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/setting_wifi_txt"
		android:textSize="20sp"
		android:textColor="#FF6954"
		/>
	<TextView
		android:id="@+id/wifi_summary_tv"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/setting_wifi_summary_txt"
		android:textSize="13sp"
		android:textColor="#FF6954"
		/>
	</LinearLayout>
	<Button
		android:id="@+id/wifi_btn"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="@drawable/drop_down"
		android:layout_alignParentRight="true"
		android:layout_centerVertical="true"
		/>
	</RelativeLayout>        
	<RelativeLayout
		android:id="@+id/wifi_layout_disable"
		android:layout_width="fill_parent"
		android:layout_height="50dip"
		android:background="#AAFFFFFF"
		android:visibility="gone"
		/>
   
</FrameLayout>
	<View 
  		android:layout_width="fill_parent"
		android:layout_height="3dip"  
		android:background="@android:color/white"
	/>
<!-- Alram -->
	<FrameLayout 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	>
   <RelativeLayout
		android:id="@+id/alram_layout"
		android:layout_width="wrap_content"
		android:layout_height="50dip"
		android:background="#C9ED75"
		
		>	
       	<ImageView 
		android:id="@+id/alram_image"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/alram"
	     />
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="50dip"
		android:orientation="vertical"
		android:layout_marginLeft="50dip"
		>
	<TextView
		android:id="@+id/alram_tv"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/setting_alarm_txt"
		android:textSize="20sp"
		android:textColor="#FF6954"
		/>
	<TextView
		android:id="@+id/alram_summary_tv"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/setting_alarm_summary_txt"
		android:textSize="13sp"
		android:textColor="#FF6954"
		/>
	</LinearLayout> 
	
	<Button
		android:id="@+id/alram_btn"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="@drawable/drop_down"
		android:layout_alignParentRight="true"
		android:layout_centerVertical="true"
		/>
	</RelativeLayout>      
	<RelativeLayout
		android:id="@+id/alram_layout_disable"
		android:layout_width="fill_parent"
		android:layout_height="50dip"
		android:background="#AAFFFFFF"
		android:visibility="gone"
		/>
   
</FrameLayout>   
   	<View 
  		android:layout_width="fill_parent"
		android:layout_height="3dip"  
		android:background="@android:color/white"
	/>
   
<!-- sound -->
   <RelativeLayout
		android:id="@+id/sound_layout"
		android:layout_width="fill_parent"
		android:layout_height="50dip"
		android:orientation="horizontal"
		android:background="#FFD280"
		>
	<ImageView 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/sound"
	     />
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="50dip"
		android:orientation="vertical"
		android:layout_marginLeft="50dip"
		>
	<TextView
		android:id="@+id/sound_tv"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/setting_sound_txt"
		android:textSize="20sp"
		android:textColor="#FF6954"
		/>
	<TextView
		android:id="@+id/sound_summary_tv"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/setting_sound_summary_txt"
		android:textSize="13sp"
		android:textColor="#FF6954"
		/>
	</LinearLayout>
	<ToggleButton
		android:id="@+id/sound_togglebtn"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_centerVertical="true"
		/>
	</RelativeLayout>
	<View 
  		android:layout_width="fill_parent"
		android:layout_height="3dip"  
		android:background="@android:color/white"
	/>
	
	
<!-- vibrate -->
   <RelativeLayout
		android:id="@+id/vibrate_layout"
		android:layout_width="fill_parent"
		android:layout_height="50dip"
		android:orientation="horizontal"
		android:background="#FFD280"
		>
	 <ImageView 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/vibrator"
	     />
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="50dip"
		android:orientation="vertical"
		android:layout_marginLeft="50dip"
		>
	<TextView
		android:id="@+id/vibrate_tv"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/setting_vibrate_txt"
		android:textSize="20sp"
		android:textColor="#FF6954"
		/>
	<TextView
		android:id="@+id/vibrate_summary_tv"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/setting_vibrate_summary_txt"
		android:textSize="13sp"
		android:textColor="#FF6954"
		/>
	</LinearLayout>
	<ToggleButton
		android:id="@+id/vibrate_togglebtn"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_centerVertical="true"
		/>
	</RelativeLayout>    
	
 	<View 
  		android:layout_width="fill_parent"
		android:layout_height="3dip"  
		android:background="@android:color/white"
	/>
	
<!-- Help -->
   <RelativeLayout
		android:id="@+id/help_layout"
		android:layout_width="fill_parent"
		android:layout_height="50dip"
		android:orientation="horizontal"
		android:background="#C9ED75"
		android:visibility="gone"
		>
	<ImageView 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/info"
	     />
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="50dip"
		android:orientation="vertical"
		android:layout_marginLeft="50dip"
		>
	<TextView
		android:id="@+id/help_tv"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/setting_help_txt"
		android:textSize="20sp"
		android:textColor="#FF6954"
		/>
	<TextView
		android:id="@+id/help_summary_tv"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/setting_help_summary_txt"
		android:textSize="13sp"
		android:textColor="#FF6954"
		/>
	</LinearLayout>
	</RelativeLayout>    
	
	<View 
  		android:layout_width="fill_parent"
		android:layout_height="3dip"  
		android:background="@android:color/white"
		android:visibility="gone"
	/>
   
<!-- version Info -->
   <RelativeLayout
		android:id="@+id/version_layout"
		android:layout_width="fill_parent"
		android:layout_height="50dip"
		android:orientation="horizontal"
		android:background="#FFD280">
	<ImageView 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/info"
	     />
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="50dip"
		android:orientation="vertical"
		android:layout_marginLeft="50dip"
		>
	<TextView
		android:id="@+id/version_tv"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/setting_version_txt"
		android:textSize="20sp"
		android:textColor="#FF6954"
		/>
	<TextView
		android:id="@+id/version_summary_tv"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/setting_version_summary_txt"
		android:textSize="13sp"
		android:textColor="#FF6954"
		/>
	</LinearLayout>
	</RelativeLayout> 
   	<View 
  		android:layout_width="fill_parent"
		android:layout_height="3dip"  
		android:background="@android:color/white"
	/>
</LinearLayout>